[package]
name = "cargo-context-lint"
version = "0.1.0"
edition = "2021"
description = "Cargo plugin to detect double error context from fn_error_context + anyhow"
license = "MIT OR Apache-2.0"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "lint", "anyhow", "error-context"]

[[bin]]
name = "cargo-context-lint"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.19"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
